--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^19.1.1",
     "react-firebase-hooks": "^5.1.1",
     "react-router-dom": "^7.8.2",
+    "react-router-hash-link": "^2.4.3",
     "react-toastify": "^11.0.5"
   },
   "devDependencies": {
